src/test/ui/type-alias-impl-trait/generic_duplicate_param_use.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use.rs:21:5
   |
LL |     t
   |     ^
   |
note: type used multiple times
  --> $DIR/generic_duplicate_param_use.rs:8:13
   |
LL | type TwoTys<T, U> = impl Debug;
   |             ^  ^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use.rs:26:5
   |
LL |     t
   |     ^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_param_use.rs:15:19
   |
LL | type TwoLifetimes<'a, 'b> = impl Debug + Captures<'a> + Captures<'b>;
   |                   ^^  ^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use.rs:31:5
   |
LL |     t
   |     ^
   |
note: constant used multiple times
  --> $DIR/generic_duplicate_param_use.rs:17:16
   |
LL | type TwoConsts<const X: usize, const Y: usize> = impl Debug;
   |                ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

